# General-Purpose-Robotic-Brain

./: CMakeCache.txt  CMakeLists.txt  InvertedPendulum_mscfbk_09__17_Standalone.asim  Makefile  README.md  agile_robotics_controller  agile_robotics_controller.project  agile_robotics_controller.sh  agile_robotics_controller.workspace  cmake_install.cmake  neuron_equations.txt  submitted_abstract.docx
.codelite/: agile_robotics_controller.session  refactoring.db
AgileRobotics_Supplied_Ref_Material/InvertedPendulum_mscfbk_09__17/: Controller_and_System.aform  LineChart.aform  Output_Torque.aform  Positive_Torque_Fbk.aform  Snapshot.osg
agile_controller/: agile_controller.project
agile_robotics_controller/: agile_robotics_controller.cbp
code/include/: InvertedPendulum_mscfbk_09__17_Standalone.asim  config_data.cpp  config_parse.cpp  config_parse.cu  config_parse2.cpp  device_control.cpp  device_control.cu  encode_parsed_nn.cpp  error_handler.hpp  main.cpp  model_config_data.hpp  system_defines.h  system_defines.hpp
code/src/: main.cpp
images_poster/: config_file snip.xml
refs_extras/: Animatlab_ConfigData_Definitions (Autosaved).xlsx  Animatlab_ConfigData_Definitions.xlsx  Notes_CMake.txt  Notes_other.txt  ~$Animatlab_ConfigData_Definitions.xlsx
refs_extras/AgileRobotics_Supplied_Ref_Material/InvertedPendulum_mscfbk_09__17/: Deriv_CW.aform  InvertedPendulum_mscfbk_09__17.aproj  LineChart (1).aform  LineChart.aform  Output_Torque.aform  Physical_Joint.aform  Positive_Torque_Fbk.aform  Prop_CW.aform  Subtraction.aform
refs_extras/treadmill/: Treadmill.ino  Treadmillv03.mlapp
test_files/: InvertedPendulum_mscfbk_09__17.aproj
